force-app/main/default/objects/PayslipLoan__c/PayslipLoan__c.object-meta.xml
<CustomObject>
    <label>Payslip+Loan</label>
    <nameField>
        <displayFormat>PSLN-{000000}</displayFormat>
        <label>PAYSLIP+LOAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payslip+Loan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>