force-app/main/default/objects/PayslipLoan__c/fields/LoanID__c.field-meta.xml
<CustomField>
    <fullName>LoanID__c</fullName>
    <label>LOAN ID</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>PAYSLIP+LOAN</relationshipLabel>
    <relationshipName>PayslipLoan</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>