force-app/main/default/objects/PayslipLoan__c/fields/UnpaidBalOfPayslipFormu__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalOfPayslipFormu__c</fullName>
    <formula>PayslipID__r.UnpaidBalancePayroll__c</formula>
    <label>UNPAID BALANCE OF PAYSLIP-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>