force-app/main/default/objects/PayslipLoan__c/fields/UnpaidBalOfPayslipLoan__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalOfPayslipLoan__c</fullName>
    <label>UNPAID BALANCE OF PAYSLIP-LOAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>